--- a/notebooks/kpf-conversion.ipynb
+++ b/notebooks/kpf-conversion.ipynb
@@ -23,19 +23,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "foo\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run conversion from KPF (Kwiver Packet Format) to DIVE JSON\n",
     "# https://kwiver-diva.readthedocs.io/en/latest/kpf.html\n",
@@ -75,7 +67,9 @@
     "    out.write(json.dumps(plain_trackmap))\n",
     "with open(output_csv, \"w\") as out:\n",
     "    for line in viame.export_tracks_as_csv(plain_trackmap):\n",
-    "        out.write(line)"
+    "        out.write(line)\n",
+    "\n",
+    "print(f'Found {len(trackmap.keys())} tracks and {len(actor_map.keys())} actors')"
    ]
   },
   {
